--- a/MinimalisticWPF.csproj
+++ b/MinimalisticWPF.csproj
@@ -44,7 +44,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="MinimalisticWPF.Generator" Version="2.6.4" />
+	  <PackageReference Include="MinimalisticWPF.Generator" Version="2.6.6-pre" />
 	</ItemGroup>
 
 	<ItemGroup>
