支持纯色、线性、径向画刷的过渡自生成

--- a/MinimalisticWPF.csproj
+++ b/MinimalisticWPF.csproj
@@ -18,7 +18,7 @@
 		<NeutralLanguage>zh-CN</NeutralLanguage>
 		<Description>Using C# code to write front-end effects in a WPF project? This sounds crazy, but this library can help you. It not only has a completely independent transition system, but also has support for source code generators of the MVVM design pattern. For back-end developers, this can greatly reduce the learning cost of XAML. And you know, the C# syntax is concise and elegant.</Description>
 		<RepositoryType>git</RepositoryType>
-		<Version>4.7.0-pre</Version>
+		<Version>4.7.0</Version>
 		<Authors>Axvser</Authors>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
