--- a/MinimalisticWPF.csproj
+++ b/MinimalisticWPF.csproj
@@ -44,7 +44,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="MinimalisticWPF.Generator" Version="3.1.3-pre" />
+	  <PackageReference Include="MinimalisticWPF.Generator" Version="3.1.4" />
 	</ItemGroup>
 
 	<ItemGroup>
