--- a/MinimalisticWPF.csproj
+++ b/MinimalisticWPF.csproj
@@ -44,7 +44,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="MinimalisticWPF.Generator" Version="3.2.0-beta" />
+	  <PackageReference Include="MinimalisticWPF.Generator" Version="3.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
