--- a/MinimalisticWPF.csproj
+++ b/MinimalisticWPF.csproj
@@ -62,4 +62,8 @@
 	  <None Include="E:\VisualStudio\Projects\WPF\MinimalisticWPF\MinimalisticWPF\.editorconfig" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="HotKey\" />
+	</ItemGroup>
+
 </Project>
