--- a/MinimalisticWPF.csproj
+++ b/MinimalisticWPF.csproj
@@ -18,7 +18,7 @@
 		<NeutralLanguage>zh-CN</NeutralLanguage>
 		<Description>Provide an extremely simplified development experience for WPF projects, implementing functions such as transition, hover, themes, and MonoBehaviour in C#. In some scenarios, its readability is superior to that of XAML.</Description>
 		<RepositoryType>git</RepositoryType>
-		<Version>5.0.1</Version>
+		<Version>5.0.2</Version>
 		<Authors>Axvser</Authors>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
@@ -45,6 +45,10 @@
 
 	<ItemGroup>
 	  <PackageReference Include="MinimalisticWPF.Generator" Version="4.4.1" />
+	  <PackageReference Include="NuGet.Build.Tasks.Pack" Version="6.14.0">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
